# scraping

./: .gitignore  Makefile  Pipfile  README.md  calender.csv  classes.json  entry_points.cfg  events.ical  events.ics  main.py  news.xml  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: scrape.yml
calconv/: __init__.py
docs/: events.ical  events.ics  notices.xml
scraping/: main.py
scraping/libs/: db.py  logger.py  web.py
scraping/models/: classes.py  events.py  news.py
scraping/parser/: classes.lark  classes.py
scraping/scrapers/: classes.py  events.py  news.py
scraping/services/: date.py  dateutil.py  firestore.py  logger.py  twitter.py  web.py
tnct-info/: class.py  event.py  logger.py  main.py  notice.py  utils.py
tnct-info/extractor/: classextractor.py  eventextractor.py  noticeextractor.py
tnct-info/libs/: wordconv.py
tnct-info/model/: classinfo.py  eventdata.py
