[tool.poetry]
name = "scraping"
version = "0.1.0"
description = ""
authors = ["arata <arata04962@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
firebase-admin = "^4.5.1"
requests = "^2.25.1"
colorama = "^0.4.4"
icalendar = "^4.0.7"
feedgen = "^0.9.0"
beautifulsoup4 = "^4.9.3"
lark = "^0.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
